# 99-bottles

./: .gitignore  COPYING  Makefile.am  README  README.md  configure.ac
build-aux/: git-version-gen  gitlog-to-changelog
src/: 99bottles.h  Makefile.am  bottles.h  main.c
